<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.prmproject.clothesstoremobileandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_shop"
            app:destination="@id/navigation_shop" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.prmproject.clothesstoremobileandroid.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop">
        <argument android:name="categoryId" app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bag"
        android:name="com.prmproject.clothesstoremobileandroid.ui.bag.BagFragment"
        android:label="@string/title_bag"
        tools:layout="@layout/fragment_bag" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.prmproject.clothesstoremobileandroid.ui.favourites.FavouritesFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.prmproject.clothesstoremobileandroid.ui.Auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_forgot_password"
            app:destination="@id/navigation_forgot_password" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.prmproject.clothesstoremobileandroid.ui.Auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_forgot_password"
            app:destination="@id/navigation_forgot_password" />
    </fragment>

    <fragment
        android:id="@+id/navigation_forgot_password"
        android:name="com.prmproject.clothesstoremobileandroid.ui.Auth.ForgotPasswordFragment"
        android:label="Forgot Password"
        tools:layout="@layout/fragment_forgot_password">
        <action
            android:id="@+id/action_navigation_forgot_password_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_forgot_password_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list_chat"
        android:name="com.prmproject.clothesstoremobileandroid.ui.Chat.ChatListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_list_chat">
        <action
            android:id="@+id/action_navigation_list_chat_to_navigation_chat"
            app:destination="@id/navigation_chat" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.prmproject.clothesstoremobileandroid.ui.Chat.ChatFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_chat">
    </fragment>

    <fragment
        android:id="@+id/navigation_login_required"
        android:name="com.prmproject.clothesstoremobileandroid.ui.Auth.LoginRequiredFragment"
        android:label="Login Required"
        tools:layout="@layout/fragment_login_required">
        <action
            android:id="@+id/action_navigation_login_required_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_required_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
</navigation>
