<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"/>

<!--    <EditText-->
<!--        android:id="@+id/editTextOtp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:paddingHorizontal="16dp"-->
<!--        android:layout_marginVertical="8dp"-->
<!--        android:minHeight="48dp"-->
<!--        android:textSize="14sp"-->
<!--        android:hint="Enter OTP"-->
<!--        android:inputType="number"-->
<!--        android:maxLength="6"-->
<!--        -->
<!--        android:visibility="gone" />-->

    <LinearLayout
        android:id="@+id/otpContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">

        <!-- Mỗi EditText sẽ đại diện cho một chữ số của OTP -->
        <EditText
            android:id="@+id/editTextOtp1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/editTextOtp2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/editTextOtp3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/editTextOtp4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/editTextOtp5"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/editTextOtp6"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:padding="8dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">


        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:hint="Enter new password"
            android:inputType="textPassword"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/button_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="Hiện mật khẩu"
            android:src="@drawable/ic_visibility_off"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:hint="Confirm new password"
            android:inputType="textPassword"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/button_show_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="Hiện mật khẩu"
            android:src="@drawable/ic_visibility_off"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="15dp">

        <Button
            android:id="@+id/buttonRequestOtp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/img_rect_button_primary_big_inactive"
            android:text="Request OTP"
            android:textColor="#FFFFFFFF"/>

        <Button
            android:id="@+id/buttonBackToEmail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/img_rect_button_primary_big_inactive"
            android:text="Back"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/buttonVerifyOtp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/img_rect_button_primary_big_inactive"
            android:text="Verify"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/img_rect_button_primary_big_inactive"
            android:text="Reset"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="14sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:paddingStart="4dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textSize="14sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:paddingStart="4dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>